# agnostichat-ai

./: .dockerignore  .editorconfig  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  app.py  app_nicegui.py  docker-compose.yml  elasticsearch_utils.py  elasticsearch_utils_prod.py  llm_utils.py  prompt_builder.py  pyproject.toml  query_utils.py  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
agnostichat/: __init__.py  __main__.py  config.py
agnostichat/services/: __init__.py  elasticsearch_utils.py  llm_utils.py  prompt_builder.py
agnostichat/ui/: __init__.py  app.py  chat.py  components.py  state.py  styles.py
docker/: README.md
docker-examples/elastic-test/: Dockerfile.init  README.md  docker-compose.yml
docker-examples/elastic-test/data-sample/: generate_customer_data.py  generate_marketing_data.py  init_data.sh
docker-examples/ollama/: Dockerfile  app.py  docker-compose.yml
docker/data-sample/: generate_customer_data.py  generate_marketing_data.py
docker/elastic-test/: docker-compose.yml
tests/: conftest.py  test_services.py
